--- a/room.html
+++ b/room.html
@@ -52,13 +52,13 @@
             <div class="room__about"> 
               <div class="room__information">
                 <h3 class="room__title">Сведения о номере</h3>
-                        <div class="benefits"><img class="benefits__svg" src="assets/images/77c7a81b26ddec926fbd.svg" alt="alt">
+                        <div class="benefits"><img class="benefits__svg" src="assets/images/bff4d8d74f2fa6026d27.svg" alt="alt">
                           <div class="benefits-comfort__text">
                             <h3 class="benefits__text-name">Комфорт</h3>
                             <p class="benefits__text-description">Шумопоглощающие стены</p>
                           </div>
                         </div>
-                        <div class="benefits"><img class="benefits__svg" src="assets/images/8486539cf1de503e0dba.svg" alt="alt">
+                        <div class="benefits"><img class="benefits__svg" src="assets/images/ba4bbd6a0da5a6dedd41.svg" alt="alt">
                           <div class="benefits-location__text">
                             <h3 class="benefits__text-name">Удобство</h3>
                             <p class="benefits__text-description">Окно в каждой из спален</p>
@@ -75,14 +75,51 @@
                 <h3 class="room__title">Впечатления от номера</h3>
                 <div class="room__chart"> 
                   <div class="room__chart-circle">
-                    <p>ddd</p>
+                    <canvas id="myChart" style="margin-left: -1.8rem;" width="350" height="126"></canvas>
                   </div>
-                  <ul class="room__chart-list">
-                    <li class="room__chart-item"><span class="room__chart-dot"></span><span class="room__chart-text">Великолепно</span></li>
-                    <li class="room__chart-item"><span class="room__chart-dot"></span><span class="room__chart-text">Хорошо</span></li>
-                    <li class="room__chart-item"><span class="room__chart-dot"></span><span class="room__chart-text">Удовлетворительно</span></li>
-                    <li class="room__chart-item"><span class="room__chart-dot"></span><span class="room__chart-text">Разачарован</span></li>
+                </div>
+              </div>
+              <div class="room__comment">
+                <div class="room__reviews"> 
+                  <h3 class="room__title">Отзывы посетителей номера</h3><span class="room__title-add">2 отзыва</span>
+                </div>
+                        <div class="comment room__comment-item"> 
+                          <div class="comment__user"><img class="comment__image" src="assets/images/accd26d47c58826bb371.png" alt="murad-sarafanov">
+                                    <div class="like-btn comment__like">
+                                      <div class="like-btn__content">
+                                        <div class="like-btn__value">12</div>
+                                      </div>
+                                    </div>
+                          </div>
+                          <div class="comment__info"><span class="comment__name">Мурад Сарафанов</span><span class="comment__date">5 дней назад</span>
+                            <p class="comment__text">Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.</p>
+                          </div>
+                        </div>
+                        <div class="comment room__comment-item"> 
+                          <div class="comment__user"><img class="comment__image" src="assets/images/4a3b0c80ef277e5696a5.png" alt="murad-sarafanov">
+                                    <div class="like-btn comment__like">
+                                      <div class="like-btn__content">
+                                        <div class="like-btn__value">2</div>
+                                      </div>
+                                    </div>
+                          </div>
+                          <div class="comment__info"><span class="comment__name">Патрисия Стёклышкова</span><span class="comment__date">Неделю назад</span>
+                            <p class="comment__text">Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент</p>
+                          </div>
+                        </div>
+              </div>
+              <div class="room__additional">
+                <div class="room__rules">
+                  <h3 class="room__title">Правила</h3>
+                  <ul class="room__list">
+                    <li class="room__item"><span class="room__item-dot room__item-dot--grey"></span><span class="room__item-text">Нельзя с питомцами</span></li>
+                    <li class="room__item"><span class="room__item-dot room__item-dot--grey"></span><span class="room__item-text">Без вечеринок и мероприятий</span></li>
+                    <li class="room__item"><span class="room__item-dot room__item-dot--grey"></span><span class="room__item-text">Время прибытия — после 13:00, а выезд до 12:00</span></li>
                   </ul>
+                </div>
+                <div class="room__cancel">
+                  <h3 class="room__title">Отмена</h3>
+                  <p class="room__text">Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.</p>
                 </div>
               </div>
             </div>
@@ -156,7 +193,7 @@
         <div class="inner-container">
           <div class="footer__container">
             <div class="footer__main"> 
-              <div class="footer__info"><a href="./index.html"><img class="footer__logo" src="assets/images/2a99fd929669d607cc80.svg" alt="alt"></a>
+              <div class="footer__info"><a href="./index.html"><img class="footer__logo" src="assets/images/13a17d6b0d1594e874c6.svg" alt="alt"></a>
                 <p class="footer__text">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» </p>
               </div>
               <ul class="footer__nav">
@@ -193,7 +230,7 @@
         <div class="inner-container">
           <div class="footer__additional">
             <div class="footer__copyright">Copyright © 2018 Toxin отель. Все права защищены.</div>
-            <div class="footer__social"><img class="footer__social-network" src="assets/images/86f1a0deeab514181b31.svg" alt="alt"><img class="footer__social-network" src="assets/images/c5e8f56ee9e22d7c6f05.svg" alt="alt"><img class="footer__social-network" src="assets/images/db3a197aae8d5912da15.svg" alt="alt"></div>
+            <div class="footer__social"><img class="footer__social-network" src="assets/images/9bcafb2d6155f305c58b.svg" alt="alt"><img class="footer__social-network" src="assets/images/43716815b160273236b5.svg" alt="alt"><img class="footer__social-network" src="assets/images/989e049e39da6627ba56.svg" alt="alt"></div>
           </div>
         </div>
       </footer>
