--- a/login.html
+++ b/login.html
@@ -43,60 +43,30 @@
           </div>
         </div>
       </div>
-      <div class="main"> 
-        <div class="landing">
-          <div class="landing__slider"><img class="landing__image" src="assets/images/f9b0b213e194539b431b.png" alt="alt"><img class="landing__image" src="assets/images/923b769ac250e7b59b31.png" alt="alt"><img class="landing__image" src="assets/images/4f46eaf9c0bb5900fcbf.png" alt="alt"></div>
-                  <div class="card-search landing__room-search">
-                    <div class="card-search__content">
-                      <h2 class="card-search__title">Найдём номера под ваши пожелания</h2>
-                              <form class="date-form card-search__date-range">
-                                <div class="date-form__container">
-                                  <h3 class="date-form__suptitle">прибытие</h3>
-                                  <input class="date-form__inp date-form__inp--start datepicker" type="text" max="1979-12-31" placeholder="дд.мм.гггг" readonly><i class="material-icons material-icons--color50 material-icons--bold date-form__icon">expand_more</i>
+      <div class="main">
+        <div class="registration__background"></div>
+        <div class="inner-container">
+          <div class="login">
+                    <div class="card-login login__card">
+                      <div class="card-login__content">
+                        <h2 class="card-login__title">Войти</h2>
+                                <div class="text-input card-login__input">
+                                  <input class="text-input__input" type="text" name="text-field" placeholder="Email">
                                 </div>
-                                <div class="date-form__container">
-                                  <h3 class="date-form__suptitle">выезд</h3>
-                                  <input class="date-form__inp date-form__inp--end datepicker" type="text" max="1979-12-31" placeholder="дд.мм.гггг" readonly><i class="material-icons material-icons--color50 material-icons--bold date-form__icon">expand_more</i>
+                                <div class="text-input card-login__input">
+                                  <input class="text-input__input" type="text" name="text-field" placeholder="Пароль">
                                 </div>
-                              </form>
-                      <h3 class="card-search__suptitle">гости</h3>
-                              <div class="dropdown card-search__dropdown">
-                                <button class="dropdown__type" type="submit" name="dropdown">Сколько гостей<i class="material-icons material-icons--color50 material-icons--bold dropdown__icon">expand_more</i></button>
-                                <div class="dropdown__guest">
-                                  <ul class="dropdown__list">
-                                    <li class="dropdown__item" data-value="adults">Взрослые
-                                      <div class="dropdown__counter">
-                                        <button class="dropdown__btn" type="submit" data-direction="minus">-</button>
-                                        <input class="dropdown__value" type="number" value="0" max="9" name="adults">
-                                        <button class="dropdown__btn" type="submit" data-direction="plus">+</button>
-                                      </div>
-                                    </li>
-                                    <li class="dropdown__item" data-value="children">Дети
-                                      <div class="dropdown__counter">
-                                        <button class="dropdown__btn" type="submit" data-direction="minus">-</button>
-                                        <input class="dropdown__value" type="number" value="0" max="9" name="children">
-                                        <button class="dropdown__btn" type="submit" data-direction="plus">+</button>
-                                      </div>
-                                    </li>
-                                    <li class="dropdown__item" data-value="babies">Младенцы
-                                      <div class="dropdown__counter">
-                                        <button class="dropdown__btn" type="submit" data-direction="minus">-</button>
-                                        <input class="dropdown__value" type="number" value="0" max="9" name="babies">
-                                        <button class="dropdown__btn" type="submit" data-direction="plus">+</button>
-                                      </div>
-                                    </li>
-                                    <div class="dropdown__submit">
-                                      <button class="dropdown__submit-item" type="submit" name="clear">Очистить</button>
-                                      <button class="dropdown__submit-item" type="submit" name="submit">Применить</button>
-                                    </div>
-                                  </ul>
-                                </div>
-                              </div>
-                              <div class="button-big card-search__btn"><a class="button-big__link" href="./search.html">
-                                  <button class="button-big__submit" type="submit">подобрать номер</button><i class="material-icons material-icons--color-white button-big__icon">arrow_forward</i></a></div>
+                                <div class="button-big card-login__btn"><a class="button-big__link" href="./search.html">
+                                    <button class="button-big__submit" type="submit">войти</button><i class="material-icons material-icons--color-white button-big__icon">arrow_forward</i></a></div>
+                        <div class="card-login__login">
+                          <div class="card-login__login-info">Нет аккаунта на Toxin?</div>
+                                  <div class="button-transparent card-login__btn-tr">
+                                    <button class="button-transparent__inp" type="submit">создать</button>
+                                  </div>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-          <p class="landing__text">Лучшие номера для вашей работы, отдыха и просто вдохновения</p>
+          </div>
         </div>
       </div>
       <footer class="footer">
