--- a/registration.html
+++ b/registration.html
@@ -9,35 +9,36 @@
   <link href="main.bundle.css" rel="stylesheet"></head>
   <body>
     <div class="wrapper">
-      <div class="header"> 
-        <div class="inner-container">   
+      <div class="header">
+        <div class="inner-container">
           <div class="header__container"><a href="./index.html">
-              <div class="header__logo"> 
-                <div class="header__logo-svg"> </div>
-                <div class="header__logo-text"> </div>
+              <div class="header__logo">
+                <div class="header__logo-svg"></div>
+                <div class="header__logo-text"></div>
               </div></a>
             <div class="header__content">
-                    <div class="header__menu"> <a class="header__link" href="#">О нас</a><a class="header__link header__link--drop" href="#">Услуги<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
-                        <ul class="header__link-menu">
-                          <li class="header__link-item">Услуга один</li>
-                          <li class="header__link-item">Услуга два</li>
-                          <li class="header__link-item">Услуга три</li>
-                        </ul></a><a class="header__link" href="#">Вакансии</a><a class="header__link" href="#">Новости</a><a class="header__link header__link--drop" href="#">Соглашения<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
-                        <ul class="header__link-menu">
-                          <li class="header__link-item">Соглашение один</li>
-                          <li class="header__link-item">Соглашение два</li>
-                          <li class="header__link-item">Соглашение три</li>
-                        </ul></a></div>
-                    <div class="material-icons header__burger burger">menu</div>
-                    <div class="burger__menu"><a class="burger__link">О нас</a><a class="burger__link">Услуги</a><a class="burger__link">Вакансии</a><a class="burger__link">Новости</a><a class="burger__link">Соглашения</a></div>
-                    <div class="header__authorization"><i class="material-icons header__acc--mobile">account_circle</i>
-                            <div class="button-transparent header__login">
-                              <button class="button-transparent__inp" type="submit">войти</button>
-                            </div><a href="./registration.html">
-                              <div class="button header__registration">
-                                <button class="button__submit button__submit--small" type="submit">зарегистрироваться</button>
-                              </div></a>
-                    </div>
+              <div class="header__menu"> <a class="header__link" href="#">О нас</a><a class="header__link header__link--drop" href="#">Услуги<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
+                  <ul class="header__link-menu">
+                    <li class="header__link-item">Услуга один</li>
+                    <li class="header__link-item">Услуга два</li>
+                    <li class="header__link-item">Услуга три</li>
+                  </ul></a><a class="header__link" href="#">Вакансии</a><a class="header__link" href="#">Новости</a><a class="header__link header__link--drop" href="#">Соглашения<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
+                  <ul class="header__link-menu">
+                    <li class="header__link-item">Соглашение один</li>
+                    <li class="header__link-item">Соглашение два</li>
+                    <li class="header__link-item">Соглашение три</li>
+                  </ul></a></div>
+              <div class="material-icons header__burger burger">menu</div>
+              <div class="burger__menu"><a class="burger__link">О нас</a><a class="burger__link">Услуги</a><a class="burger__link">Вакансии</a><a class="burger__link">Новости</a><a class="burger__link">Соглашения</a><br><a class="burger__reg" href="./login.html"><i class="material-icons material-icons--bold header__link--drop-icon burger__reg-svg">login</i>
+                  <div class="burger__reg-link">Войти</div></a><a class="burger__reg" href="./registration.html"><i class="material-icons material-icons--bold header__link--drop-icon burger__reg-svg">how_to_reg</i>
+                  <div class="burger__reg-link">Регистрация</div></a></div>
+              <div class="header__authorization"><a href="./login.html">
+                  <div class="button-transparent header__login">
+                    <button class="button-transparent__inp" type="submit">войти</button>
+                  </div></a><a href="./registration.html">
+                  <div class="button-small header__registration">
+                    <button class="button-small__submit" type="submit">зарегистрироваться</button>
+                  </div></a></div>
             </div>
           </div>
         </div>
@@ -69,7 +70,7 @@
                                 </form>
                         <h3 class="card-registration__suptitle">дата рождения</h3>
                                 <div class="masked-text-field card-registration__date">
-                                  <input class="masked-text-field__input datepicker-no-range" type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off" max="1979-12-31">
+                                  <input class="masked-text-field__input datepicker-one-el" type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off" max="1979-12-31" readonly>
                                 </div>
                         <h3 class="card-registration__suptitle">данные для входа в сервис</h3>
                         <div class="card-registration__data">
@@ -85,13 +86,13 @@
                                     <input class="toggle__inp" type="checkbox"><span class="toggle__slider"></span><span class="toggle__text">Получать спецпредложения</span>
                                   </label>
                                 </div>
-                                <div class="button card-registration__btn"><a class="button__link" href="./search.html">
-                                    <button class="button__submit button__submit--big" type="submit">зарегестрироваться</button><i class="material-icons material-icons--color-white button__icon">arrow_forward</i></a></div>
+                                <div class="button-big card-registration__btn"><a class="button-big__link" href="./registration.html">
+                                    <button class="button-big__submit" type="submit">зарегестрироваться</button><i class="material-icons material-icons--color-white button-big__icon">arrow_forward</i></a></div>
                         <div class="card-registration__login">
-                          <div class="card-registration__login-info">Уже есть аккаунт на Toxin</div>
-                                  <div class="button-transparent card-registration__btn-tr">
-                                    <button class="button-transparent__inp" type="submit">войти</button>
-                                  </div>
+                          <div class="card-registration__login-info">Уже есть аккаунт на Toxin</div><a href="./login.html"> 
+                                    <div class="button-transparent card-registration__btn-tr">
+                                      <button class="button-transparent__inp" type="submit">войти</button>
+                                    </div></a>
                         </div>
                       </div>
                     </div>
@@ -101,9 +102,9 @@
       <footer class="footer">
         <div class="inner-container">
           <div class="footer__container">
-            <div class="footer__main"> 
-              <div class="footer__info"><a href="./index.html"><img class="footer__logo" src="assets/images/13a17d6b0d1594e874c6.svg" alt="alt"></a>
-                <p class="footer__text">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» </p>
+            <div class="footer__main">
+              <div class="footer__info"><a href="./index.html"><img class="footer__logo" alt="logo"></a>
+                <p class="footer__text">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p>
               </div>
               <ul class="footer__nav">
                 <li class="footer__item--title">Навигация</li>
@@ -128,9 +129,9 @@
               <ul class="footer__nav">
                 <li class="footer__item--title">Подписка</li>
                 <p class="footer__text">Получайте специальные предложения и новости сервиса</p>
-                      <form class="subscription">
-                        <input class="subscription__email" type="email" name="text-field" placeholder="Email"><span class="material-icons material-icons--color-primary subscription__arrow">arrow_forward</span>
-                      </form>
+                <form class="subscription">
+                  <input class="subscription__email" type="email" name="text-field" placeholder="Email"><span class="material-icons material-icons--color-primary subscription__arrow">arrow_forward</span>
+                </form>
               </ul>
             </div>
           </div>
@@ -139,7 +140,7 @@
         <div class="inner-container">
           <div class="footer__additional">
             <div class="footer__copyright">Copyright © 2018 Toxin отель. Все права защищены.</div>
-            <div class="footer__social"><img class="footer__social-network" src="assets/images/9bcafb2d6155f305c58b.svg" alt="alt"><img class="footer__social-network" src="assets/images/43716815b160273236b5.svg" alt="alt"><img class="footer__social-network" src="assets/images/989e049e39da6627ba56.svg" alt="alt"></div>
+            <div class="footer__social"><img class="footer__social-network footer__social-network--twitter" alt="twitter"><img class="footer__social-network footer__social-network--facebook" alt="facebook"><img class="footer__social-network footer__social-network--instagram" alt="instagram"></div>
           </div>
         </div>
       </footer>
