--- a/room.html
+++ b/room.html
@@ -9,35 +9,36 @@
   <link href="main.bundle.css" rel="stylesheet"></head>
   <body>
     <div class="wrapper">
-      <div class="header"> 
-        <div class="inner-container">   
+      <div class="header">
+        <div class="inner-container">
           <div class="header__container"><a href="./index.html">
-              <div class="header__logo"> 
-                <div class="header__logo-svg"> </div>
-                <div class="header__logo-text"> </div>
+              <div class="header__logo">
+                <div class="header__logo-svg"></div>
+                <div class="header__logo-text"></div>
               </div></a>
             <div class="header__content">
-                    <div class="header__menu"> <a class="header__link" href="#">О нас</a><a class="header__link header__link--drop" href="#">Услуги<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
-                        <ul class="header__link-menu">
-                          <li class="header__link-item">Услуга один</li>
-                          <li class="header__link-item">Услуга два</li>
-                          <li class="header__link-item">Услуга три</li>
-                        </ul></a><a class="header__link" href="#">Вакансии</a><a class="header__link" href="#">Новости</a><a class="header__link header__link--drop" href="#">Соглашения<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
-                        <ul class="header__link-menu">
-                          <li class="header__link-item">Соглашение один</li>
-                          <li class="header__link-item">Соглашение два</li>
-                          <li class="header__link-item">Соглашение три</li>
-                        </ul></a></div>
-                    <div class="material-icons header__burger burger">menu</div>
-                    <div class="burger__menu"><a class="burger__link">О нас</a><a class="burger__link">Услуги</a><a class="burger__link">Вакансии</a><a class="burger__link">Новости</a><a class="burger__link">Соглашения</a></div>
-                    <div class="header__authorization"><i class="material-icons header__acc--mobile">account_circle</i>
-                            <div class="button-transparent header__login">
-                              <button class="button-transparent__inp" type="submit">войти</button>
-                            </div><a href="./registration.html">
-                              <div class="button header__registration">
-                                <button class="button__submit button__submit--small" type="submit">зарегистрироваться</button>
-                              </div></a>
-                    </div>
+              <div class="header__menu"> <a class="header__link" href="#">О нас</a><a class="header__link header__link--drop" href="#">Услуги<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
+                  <ul class="header__link-menu">
+                    <li class="header__link-item">Услуга один</li>
+                    <li class="header__link-item">Услуга два</li>
+                    <li class="header__link-item">Услуга три</li>
+                  </ul></a><a class="header__link" href="#">Вакансии</a><a class="header__link" href="#">Новости</a><a class="header__link header__link--drop" href="#">Соглашения<span class="material-icons material-icons--color50 material-icons--bold header__link--drop-icon">expand_more</span>
+                  <ul class="header__link-menu">
+                    <li class="header__link-item">Соглашение один</li>
+                    <li class="header__link-item">Соглашение два</li>
+                    <li class="header__link-item">Соглашение три</li>
+                  </ul></a></div>
+              <div class="material-icons header__burger burger">menu</div>
+              <div class="burger__menu"><a class="burger__link">О нас</a><a class="burger__link">Услуги</a><a class="burger__link">Вакансии</a><a class="burger__link">Новости</a><a class="burger__link">Соглашения</a><br><a class="burger__reg" href="./login.html"><i class="material-icons material-icons--bold header__link--drop-icon burger__reg-svg">login</i>
+                  <div class="burger__reg-link">Войти</div></a><a class="burger__reg" href="./registration.html"><i class="material-icons material-icons--bold header__link--drop-icon burger__reg-svg">how_to_reg</i>
+                  <div class="burger__reg-link">Регистрация</div></a></div>
+              <div class="header__authorization"><a href="./login.html">
+                  <div class="button-transparent header__login">
+                    <button class="button-transparent__inp" type="submit">войти</button>
+                  </div></a><a href="./registration.html">
+                  <div class="button-small header__registration">
+                    <button class="button-small__submit" type="submit">зарегистрироваться</button>
+                  </div></a></div>
             </div>
           </div>
         </div>
@@ -59,13 +60,13 @@
                           </div>
                         </div>
                         <div class="benefits"><img class="benefits__svg" src="assets/images/ba4bbd6a0da5a6dedd41.svg" alt="alt">
-                          <div class="benefits-location__text">
+                          <div class="benefits-comfort__text">
                             <h3 class="benefits__text-name">Удобство</h3>
                             <p class="benefits__text-description">Окно в каждой из спален</p>
                           </div>
                         </div>
                         <div class="benefits"><img class="benefits__svg" src="assets/images/fcc9eaf8c182f27c6a88.svg" alt="alt">
-                          <div class="benefits-location__text">
+                          <div class="benefits-comfort__text">
                             <h3 class="benefits__text-name">Уют</h3>
                             <p class="benefits__text-description">Номер оснещён камином</p>
                           </div>
@@ -133,42 +134,42 @@
                                   <form class="date-form card-order__date-range">
                                     <div class="date-form__container">
                                       <h3 class="date-form__suptitle">прибытие</h3>
-                                      <input class="date-form__inp date-form__inp--start datepicker" type="text" max="1979-12-31" placeholder="дд.мм.гггг"><i class="material-icons material-icons--color50 material-icons--bold date-form__icon">expand_more</i>
+                                      <input class="date-form__inp date-form__inp--start datepicker" type="text" max="1979-12-31" placeholder="дд.мм.гггг" readonly><i class="material-icons material-icons--color50 material-icons--bold date-form__icon">expand_more</i>
                                     </div>
                                     <div class="date-form__container">
                                       <h3 class="date-form__suptitle">выезд</h3>
-                                      <input class="date-form__inp date-form__inp--end datepicker" type="text" max="1979-12-31" placeholder="дд.мм.гггг"><i class="material-icons material-icons--color50 material-icons--bold date-form__icon">expand_more</i>
+                                      <input class="date-form__inp date-form__inp--end datepicker" type="text" max="1979-12-31" placeholder="дд.мм.гггг" readonly><i class="material-icons material-icons--color50 material-icons--bold date-form__icon">expand_more</i>
                                     </div>
                                   </form>
                           <h3 class="card-order__suptitle">гости</h3>
                                   <div class="dropdown card-order__dropdown">
-                                    <button class="dropdown-type" type="submit" name="dropdown-field">Сколько гостей</button><i class="material-icons material-icons--color50 material-icons--bold dropdown__icon">expand_more</i>
-                                    <div class="dropdown-guest" hidden>
-                                      <ul class="dropdown-guest__list">
-                                        <li class="dropdown-guest__list-item" data-value="adults">Взрослые
-                                          <div class="counter">
-                                            <button class="counter__btn" type="submit" data-direction="minus">-</button>
-                                            <input class="counter__value" type="number" value="0" max="9" name="adults">
-                                            <button class="counter__btn" type="submit" data-direction="plus">+</button>
+                                    <button class="dropdown__type" type="submit" name="dropdown">Сколько гостей<i class="material-icons material-icons--color50 material-icons--bold dropdown__icon">expand_more</i></button>
+                                    <div class="dropdown__guest">
+                                      <ul class="dropdown__list">
+                                        <li class="dropdown__item" data-value="adults">Взрослые
+                                          <div class="dropdown__counter">
+                                            <button class="dropdown__btn" type="submit" data-direction="minus">-</button>
+                                            <input class="dropdown__value" type="number" value="0" max="9" name="adults">
+                                            <button class="dropdown__btn" type="submit" data-direction="plus">+</button>
                                           </div>
                                         </li>
-                                        <li class="dropdown-guest__list-item" data-value="children">Дети
-                                          <div class="counter">
-                                            <button class="counter__btn" type="submit" data-direction="minus">-</button>
-                                            <input class="counter__value" type="number" value="0" max="9" name="children">
-                                            <button class="counter__btn" type="submit" data-direction="plus">+</button>
+                                        <li class="dropdown__item" data-value="children">Дети
+                                          <div class="dropdown__counter">
+                                            <button class="dropdown__btn" type="submit" data-direction="minus">-</button>
+                                            <input class="dropdown__value" type="number" value="0" max="9" name="children">
+                                            <button class="dropdown__btn" type="submit" data-direction="plus">+</button>
                                           </div>
                                         </li>
-                                        <li class="dropdown-guest__list-item" data-value="babies">Младенцы
-                                          <div class="counter">
-                                            <button class="counter__btn" type="submit" data-direction="minus">-</button>
-                                            <input class="counter__value" type="number" value="0" max="9" name="babies">
-                                            <button class="counter__btn" type="submit" data-direction="plus">+</button>
+                                        <li class="dropdown__item" data-value="babies">Младенцы
+                                          <div class="dropdown__counter">
+                                            <button class="dropdown__btn" type="submit" data-direction="minus">-</button>
+                                            <input class="dropdown__value" type="number" value="0" max="9" name="babies">
+                                            <button class="dropdown__btn" type="submit" data-direction="plus">+</button>
                                           </div>
                                         </li>
-                                        <div class="dropdown-guest__list-button">
-                                          <button class="dropdown-guest__list-button-item" type="submit" name="clear">Очистить</button>
-                                          <button class="dropdown-guest__list-button-item" type="submit" name="submit">Применить</button>
+                                        <div class="dropdown__submit">
+                                          <button class="dropdown__submit-item" type="submit" name="clear">Очистить</button>
+                                          <button class="dropdown__submit-item" type="submit" name="submit">Применить</button>
                                         </div>
                                       </ul>
                                     </div>
@@ -183,8 +184,8 @@
                             <div class="card-order__price-line"></div>
                             <h2 class="card-order__price-sum">38 081₽</h2>
                           </div>
-                                  <div class="button card-order__btn"><a class="button__link" href="./search.html">
-                                      <button class="button__submit button__submit--big" type="submit">забронировать</button><i class="material-icons material-icons--color-white button__icon">arrow_forward</i></a></div>
+                                  <div class="button-big card-order__btn"><a class="button-big__link" href="./search.html">
+                                      <button class="button-big__submit" type="submit">забронировать</button><i class="material-icons material-icons--color-white button-big__icon">arrow_forward</i></a></div>
                         </div>
                       </div>
             </div>
@@ -194,9 +195,9 @@
       <footer class="footer">
         <div class="inner-container">
           <div class="footer__container">
-            <div class="footer__main"> 
-              <div class="footer__info"><a href="./index.html"><img class="footer__logo" src="assets/images/13a17d6b0d1594e874c6.svg" alt="alt"></a>
-                <p class="footer__text">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» </p>
+            <div class="footer__main">
+              <div class="footer__info"><a href="./index.html"><img class="footer__logo" alt="logo"></a>
+                <p class="footer__text">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p>
               </div>
               <ul class="footer__nav">
                 <li class="footer__item--title">Навигация</li>
@@ -221,9 +222,9 @@
               <ul class="footer__nav">
                 <li class="footer__item--title">Подписка</li>
                 <p class="footer__text">Получайте специальные предложения и новости сервиса</p>
-                      <form class="subscription">
-                        <input class="subscription__email" type="email" name="text-field" placeholder="Email"><span class="material-icons material-icons--color-primary subscription__arrow">arrow_forward</span>
-                      </form>
+                <form class="subscription">
+                  <input class="subscription__email" type="email" name="text-field" placeholder="Email"><span class="material-icons material-icons--color-primary subscription__arrow">arrow_forward</span>
+                </form>
               </ul>
             </div>
           </div>
@@ -232,7 +233,7 @@
         <div class="inner-container">
           <div class="footer__additional">
             <div class="footer__copyright">Copyright © 2018 Toxin отель. Все права защищены.</div>
-            <div class="footer__social"><img class="footer__social-network" src="assets/images/9bcafb2d6155f305c58b.svg" alt="alt"><img class="footer__social-network" src="assets/images/43716815b160273236b5.svg" alt="alt"><img class="footer__social-network" src="assets/images/989e049e39da6627ba56.svg" alt="alt"></div>
+            <div class="footer__social"><img class="footer__social-network footer__social-network--twitter" alt="twitter"><img class="footer__social-network footer__social-network--facebook" alt="facebook"><img class="footer__social-network footer__social-network--instagram" alt="instagram"></div>
           </div>
         </div>
       </footer>
