--- a/cards.html
+++ b/cards.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Reservation Project</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-  <link href="../main.bundle.css" rel="stylesheet"></head>
+  <link href="main.bundle.css" rel="stylesheet"></head>
   <body>
     <div class="cards">
       <div class="cards__inner-container">
@@ -163,8 +163,8 @@
               </div>
               <div class="card-order__add">
                 <div class="card-order__additional"><span class="card-order__additional-info">9 990₽ х 4 суток</span><span class="card-order__additional-value">39 960₽</span></div>
-                <div class="card-order__additional"><span class="card-order__additional-info">Сбор за услуги: скидка 2 179₽</span><img class="card-order__additional-img" src="../assets/images/dd96d2c9d81a1d2b5bd1.svg" alt="alt"><span class="card-order__additional-value">0₽</span></div>
-                <div class="card-order__additional"><span class="card-order__additional-info">Сбор за дополнительные услуги</span><img class="card-order__additional-img" src="../assets/images/dd96d2c9d81a1d2b5bd1.svg" alt="alt"><span class="card-order__additional-value">300₽</span></div>
+                <div class="card-order__additional"><span class="card-order__additional-info">Сбор за услуги: скидка 2 179₽</span><img class="card-order__additional-img" src="assets/images/dd96d2c9d81a1d2b5bd1.svg" alt="alt"><span class="card-order__additional-value">0₽</span></div>
+                <div class="card-order__additional"><span class="card-order__additional-info">Сбор за дополнительные услуги</span><img class="card-order__additional-img" src="assets/images/dd96d2c9d81a1d2b5bd1.svg" alt="alt"><span class="card-order__additional-value">300₽</span></div>
               </div>
               <div class="card-order__price"> 
                 <h2 class="card-order__price-sum">Итого</h2>
@@ -200,7 +200,7 @@
           <div class="products">
             <ul class="products__list">
               <li class="products__item">
-                <div class="products__img-container"><img class="products__img" src="/assets/images/rooms/room888.jpg" alt="room"><img class="products__img" src="/assets/images/rooms/room888.jpg" alt="room"><img class="products__img" src="/assets/images/rooms/room888.jpg" alt="room"><img class="products__img" src="/assets/images/rooms/room888.jpg" alt="room"><i class="material-icons material-icons--color-white products__nav--left">chevron_left</i><i class="material-icons material-icons--color-white products__nav--right">navigate_next</i>
+                <div class="products__img-container"><img class="products__img" src="./assets/images/rooms/room888.jpg" alt="room"><i class="material-icons material-icons--color-white products__nav--left">chevron_left</i><i class="material-icons material-icons--color-white products__nav--right">navigate_next</i>
                   <div class="products__nav--gradient-left"></div>
                   <div class="products__nav--gradient-right"></div>
                   <div class="products__circle"><span class="products__circle-dots"></span><span class="products__circle-dots"></span><span class="products__circle-dots"></span><span class="products__circle-dots"></span></div>
@@ -228,7 +228,7 @@
           <div class="products">
             <ul class="products__list">
               <li class="products__item">
-                <div class="products__img-container"><img class="products__img" src="/assets/images/rooms/room840.jpg" alt="room"><img class="products__img" src="/assets/images/rooms/room840.jpg" alt="room"><img class="products__img" src="/assets/images/rooms/room840.jpg" alt="room"><img class="products__img" src="/assets/images/rooms/room840.jpg" alt="room"><i class="material-icons material-icons--color-white products__nav--left">chevron_left</i><i class="material-icons material-icons--color-white products__nav--right">navigate_next</i>
+                <div class="products__img-container"><img class="products__img" src="./assets/images/rooms/room840.jpg" alt="room"><i class="material-icons material-icons--color-white products__nav--left">chevron_left</i><i class="material-icons material-icons--color-white products__nav--right">navigate_next</i>
                   <div class="products__nav--gradient-left"></div>
                   <div class="products__nav--gradient-right"></div>
                   <div class="products__circle"><span class="products__circle-dots"></span><span class="products__circle-dots"></span><span class="products__circle-dots"></span><span class="products__circle-dots"></span></div>
@@ -256,5 +256,5 @@
         </div>
       </div>
     </div>
-  <script defer src="../main.bundle.js"></script></body>
+  <script defer src="main.bundle.js"></script></body>
 </html>
